--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".AuthoricateActivity"
+            android:name=".AuthenticateActivity"
             android:label="@string/title_activity_authoricate" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
