testing for kinta item
parse from json

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile project(':AndroidBootstrap:AndroidBootstrap')
     compile 'org.functionaljava:functionaljava:3.1'
     compile 'com.mcxiaoke.volley:library:1.0.+'
+    compile 'org.hamcrest:hamcrest-all:1.3'
 }
