--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'org.functionaljava:functionaljava:3.1'
     compile 'com.mcxiaoke.volley:library:1.0.+'
     compile 'org.hamcrest:hamcrest-all:1.3'
+    compile 'com.deploygate:sdk:3.1'
 }
 
 apply plugin: 'deploygate'
